
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int ftp_recv (int,char*,int,int) ;
 int ftp_send (int,char*,int,int,char*,int) ;
 int stderr ;
 scalar_t__ strncmp (char*,char*,int) ;

int ftp_siteexec(int sock,char*buff,int buff_len,int q,char*ans,int ans_len){
 ftp_send(sock,buff,buff_len,q,ans,ans_len);
 if(strncmp(ans,"200-",4)==0)
   ftp_recv(sock,((void*)0),0,1);
 else
  ftp_recv(sock,ans,ans_len,0);

 if(strncmp(ans,"200-",4)){
  fprintf(stderr,"Cannot find site exec response string\n");
  exit(1);
 }
 return 0;
}
